# buyparts-command-center

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  docker-compose.yml  package-lock.json  package.json
.github/: CODEOWNERS  pull_request_template.md
docs/: ai-runtime-plan.md  architecture.md  bigquery-warehouse-plan.md  demo-walkthrough.md  github-flow.md  growth-channels-plan.md  manual-setup-checklist.md  mvp-roadmap.md  shopify-ingestion.md  stack-alignment.md  supplier-integration-plan.md  (+1 more)
services/worker/: README.md  pyproject.toml
services/worker/src/buyparts_worker/: __init__.py  config.py  main.py
services/worker/src/buyparts_worker/ai/: __init__.py  prompt_catalog.py
services/worker/src/buyparts_worker/db/: __init__.py  client.py
services/worker/src/buyparts_worker/db/repositories/: __init__.py  catalog.py  pricing.py
services/worker/src/buyparts_worker/growth/: __init__.py  manifest.py
services/worker/src/buyparts_worker/integrations/: bigquery.py  google_ads.py  llm_provider.py  merchant_center.py  rag_runtime.py  supplier_api.py
services/worker/src/buyparts_worker/jobs/: __init__.py  bigquery_sync.py  catalog_enrichment.py  google_ads_optimization.py  inventory_tagging.py  langchain_catalog_assistant.py  merchant_center_diagnostics.py  pricing_recommendation.py  rag_indexing.py  supplier_sync.py
services/worker/src/buyparts_worker/retrieval/: __init__.py  manifest.py
services/worker/src/buyparts_worker/suppliers/: __init__.py  manifest.py
services/worker/src/buyparts_worker/warehouse/: __init__.py  manifest.py
(+60 files in other folders)
