[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "buyparts-worker"
version = "0.1.0"
description = "Worker jobs for BuyParts catalog and pricing intelligence"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
buyparts-worker = "buyparts_worker.main:main"

[tool.setuptools.packages.find]
where = ["src"]
